# myntos

./: README.md
MyntReal_Latest/: .dockerignore  .env.example  .gitignore  .htaccess  .replit  .replitignore  ARCHITECTURE.md  Dockerfile  Makefile  Project_Knowledge.md  audit_storage_structure.sh  build.sh  check_deployment.sh  check_pending_otps.sh  codemagic.yaml  login_test.html  package-lock.json  package.json  playwright.config.js  production_menu_sync.sql  pyproject.toml  replit.md  s3_upload_script.py  shell  start.sh  start_local.bat  test_endpoints.js  test_results_menu_access_20251221_040248.json  test_s3.py  zip_for_aws.py
MyntReal_Latest/.agents/: agent_assets_metadata.toml
MyntReal_Latest/.ebextensions/: 01_env.config
MyntReal_Latest/backend/: backfill_statutory_gl.py  copy_prod_to_dev.py  copy_prod_to_dev_dry.py  endpoint_stress_test.py  gunicorn.conf.py  requirements.txt  sandbox_crud_test.py  scratch_query.py  seed_plans.py  test_attendance_system.py  test_s3.py
MyntReal_Latest/docs/: DEPLOYMENT_SIGN_OFF.md  EFS_PROTOCOL_QUICK_REFERENCE.md  FACEBOOK_LEADS_INTEGRATION.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_STAFF_SYSTEM_DEPLOYMENT_REPORT.md  HIERARCHY_PATTERN_STANDARD.md  INCOME_RECORDS_PAGE_ARCHITECTURE.md  JOURNEY_COMPLETE_FLOW_VALIDATION.md  JOURNEY_SYSTEM_ERROR_AUDIT.md  KRA_REVIEW_FILTER_PLAN.md  PHASE_3_VALIDATION_REPORT.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  REAL_DREAMS_WORKFLOW.md  Real_Dreams_Working_Plan.md  SOP_ATTENDANCE_MODULE.md  STAFF_SIDEBAR_STRUCTURE.md  STAFF_SYSTEM_COMPLETE_AUDIT.md  (+1 more)
(+1770 files in other folders)
