[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "MNR Reference Program - EV Referral Network Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.29",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "redis>=5.0.1",
    "apscheduler>=3.10.4",
    "email-validator>=2.1.0",
    "flask-migrate>=4.1.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.23",
    "oauthlib>=3.3.1",
    "aiohttp>=3.14.1",
    "cryptography>=48.0.0",
    "python-magic>=0.4.27",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0.9",
    "requests>=2.34.2",
    "psycopg2-binary>=2.9.9",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=6.1.1",
    "gunicorn>=21.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.2",
    "twilio>=8.10.0",
    "urllib3>=2.6.0",
    "pillow>=12.2.0",
    "bleach>=6.1.0",
    "boto3>=1.34.0",
    "python-docx>=1.1.0",
    "pyotp>=2.9.0",
    "pdfplumber>=0.10.0",
    "mako>=1.3.12",
    "pyasn1>=0.6.3",
    "pyjwt>=2.13.0",
    "idna>=3.11",
    "pdfminer.six>=20251230",
    "protobuf>=6.33.5,<7.0.0",
]
